# MAS-004_VJ6530-ZBC-Bridge

./: README.md  pyproject.toml
docs/: PROJECT_CONTEXT.md  SUPPORT_CHANGELOG.md  SUPPORT_RUNBOOK.md
mas004_vj6530_zbc_bridge/: __init__.py  __main__.py  _zbc_library.py  client.py  config.py  mapper.py  protocol.py  service.py
scripts/: config.example.json  default_config.json  install.sh  run.sh
systemd/: mas004-vj6530-zbc-bridge.service
tests/: test_client_status_mapping.py  test_service_probe.py
